# FEMandFVM

./: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/include/: FEM_FiniteElement.hpp  FEM_Mesh.hpp  FEM_MeshBuilder.hpp  FEM_Parser.hpp  FVM_FiniteVolumeElement.hpp  FiniteElement.hpp
src/lib/stg/: FEM_FiniteElement.cpp  FEM_Mesh.cpp  FEM_MeshBuilder.cpp  FEM_Parser.cpp  FVM_FiniteVolumeElement.cpp  FiniteElement.cpp
src/lib/tests/: CMakeLists.txt  FEM_FinElemMesh_tests.cpp  TestsHeader.hpp  main.cpp
test_resources/: triangle_fine.vtk
